@@ -8,11 +8,12 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.opentripplanner.TestOtpModel;
 import org.opentripplanner.ext.flex.trip.FlexTrip;
 import org.opentripplanner.ext.flex.trip.UnscheduledTrip;
-import org.opentripplanner.model.FeedScopedId;
-import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graphfinder.NearbyStop;
+import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.service.TransitModel;
 
 /**
  * This test makes sure that one of the example feeds in the GTFS-Flex repo works. It's the City of
@@ -24,76 +25,69 @@ import org.opentripplanner.routing.graphfinder.NearbyStop;
  */
 public class UnscheduledTripTest extends FlexTest {
 
-    static Graph graph;
+  static TransitModel transitModel;
 
-    @Test
-    public void parseAspenTaxiAsUnscheduledTrip() {
-        var flexTrips = graph.flexTripsById.values();
-        assertFalse(flexTrips.isEmpty());
-        assertEquals(
-                Set.of("t_1289262_b_29084_tn_0", "t_1289257_b_28352_tn_0"),
-                flexTrips.stream().map(FlexTrip::getId).map(FeedScopedId::getId).collect(
-                        Collectors.toSet())
-        );
+  @Test
+  void parseAspenTaxiAsUnscheduledTrip() {
+    var flexTrips = transitModel.getAllFlexTrips();
+    assertFalse(flexTrips.isEmpty());
+    assertEquals(
+      Set.of("t_1289262_b_29084_tn_0", "t_1289257_b_28352_tn_0"),
+      flexTrips.stream().map(FlexTrip::getId).map(FeedScopedId::getId).collect(Collectors.toSet())
+    );
 
-        assertEquals(
-                Set.of(UnscheduledTrip.class),
-                flexTrips.stream().map(FlexTrip::getClass).collect(
-                        Collectors.toSet())
-        );
-    }
+    assertEquals(
+      Set.of(UnscheduledTrip.class),
+      flexTrips.stream().map(FlexTrip::getClass).collect(Collectors.toSet())
+    );
+  }
 
-    @Test
-    public void calculateAccessTemplate() {
-        var trip = getFlexTrip();
-        var nearbyStop = getNearbyStop(trip);
+  @Test
+  void calculateAccessTemplate() {
+    var trip = getFlexTrip();
+    var nearbyStop = getNearbyStop(trip);
 
-        var accesses = trip.getFlexAccessTemplates(
-                nearbyStop,
-                flexDate,
-                calculator,
-                params
-        ).collect(Collectors.toList());
+    var accesses = trip.getFlexAccessTemplates(nearbyStop, flexDate, calculator, params).toList();
 
-        assertEquals(1, accesses.size());
+    assertEquals(1, accesses.size());
 
-        var access = accesses.get(0);
-        assertEquals(0, access.fromStopIndex);
-        assertEquals(0, access.toStopIndex);
+    var access = accesses.get(0);
+    assertEquals(0, access.fromStopIndex);
+    assertEquals(0, access.toStopIndex);
+  }
 
-    }
+  @Test
+  void calculateEgressTemplate() {
+    var trip = getFlexTrip();
+    var nearbyStop = getNearbyStop(trip);
+    var egresses = trip.getFlexEgressTemplates(nearbyStop, flexDate, calculator, params).toList();
 
-    @Test
-    public void calculateEgressTemplate() {
-        var trip = getFlexTrip();
-        var nearbyStop = getNearbyStop(trip);
-        var egresses = trip.getFlexEgressTemplates(
-                nearbyStop,
-                flexDate,
-                calculator,
-                params
-        ).collect(Collectors.toList());
+    assertEquals(1, egresses.size());
 
-        assertEquals(1, egresses.size());
+    var egress = egresses.get(0);
+    assertEquals(0, egress.fromStopIndex);
+    assertEquals(0, egress.toStopIndex);
+  }
 
-        var egress = egresses.get(0);
-        assertEquals(0, egress.fromStopIndex);
-        assertEquals(0, egress.toStopIndex);
-    }
+  @Test
+  void shouldGeneratePatternForFlexTripWithSingleStop() {
+    assertFalse(transitModel.getAllTripPatterns().isEmpty());
+  }
 
-    @BeforeAll
-    static void setup() {
-        graph = FlexTest.buildFlexGraph(ASPEN_GTFS);
-    }
+  @BeforeAll
+  static void setup() {
+    TestOtpModel model = FlexTest.buildFlexGraph(ASPEN_GTFS);
+    transitModel = model.transitModel();
+  }
 
-    private static NearbyStop getNearbyStop(FlexTrip trip) {
-        assertEquals(1, trip.getStops().size());
-        var stopLocation = trip.getStops().iterator().next();
-        return new NearbyStop(stopLocation, 0, List.of(), null, null);
-    }
+  private static NearbyStop getNearbyStop(FlexTrip<?, ?> trip) {
+    assertEquals(1, trip.getStops().size());
+    var stopLocation = trip.getStops().iterator().next();
+    return new NearbyStop(stopLocation, 0, List.of(), null);
+  }
 
-    private static FlexTrip getFlexTrip() {
-        var flexTrips = graph.flexTripsById.values();
-        return flexTrips.iterator().next();
-    }
+  private static FlexTrip<?, ?> getFlexTrip() {
+    var flexTrips = transitModel.getAllFlexTrips();
+    return flexTrips.iterator().next();
+  }
 }
