@@ -1,30 +1,32 @@
 package org.opentripplanner.graph_builder.issues;
 
+import org.opentripplanner.common.OsmUrlGenerator;
 import org.opentripplanner.graph_builder.DataImportIssue;
 import org.opentripplanner.routing.graph.Vertex;
 
 public class PrunedIslandStop implements DataImportIssue {
 
-    public static final String FMT = "Stop %s was mapped to a pruned sub graph";
+  public static final String FMT = "Stop %s was linked to a pruned sub graph";
 
-    final Vertex vertex;
+  final Vertex vertex;
 
-    public PrunedIslandStop(Vertex vertex){
-        this.vertex = vertex;
-    }
+  public PrunedIslandStop(Vertex vertex) {
+    this.vertex = vertex;
+  }
 
-    @Override
-    public String getMessage() {
-        return String.format(FMT, vertex.getLabel());
-    }
+  @Override
+  public String getMessage() {
+    return String.format(FMT, vertex.getLabel());
+  }
 
-    @Override
-    public String getHTMLMessage() {
-        return String.format(FMT, vertex.getLabel());
-    }
+  @Override
+  public String getHTMLMessage() {
+    var url = OsmUrlGenerator.fromCoordinate(vertex.getCoordinate());
+    return "<a href=\"%s\">%s</a>".formatted(url, getMessage());
+  }
 
-    @Override
-    public Vertex getReferencedVertex() {
-        return vertex;
-    }
+  @Override
+  public Vertex getReferencedVertex() {
+    return vertex;
+  }
 }
