@@ -1,73 +1,76 @@
 package org.opentripplanner.routing.algorithm;
 
-import org.junit.Assert;
-import org.junit.Test;
-import org.opentripplanner.model.Agency;
-import org.opentripplanner.model.FeedScopedId;
-import org.opentripplanner.model.Route;
-import org.opentripplanner.routing.api.request.RoutingRequest;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.opentripplanner.transit.model._data.TransitModelForTest.id;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+import java.util.Set;
+import org.junit.jupiter.api.Test;
+import org.opentripplanner.routing.algorithm.raptoradapter.transit.request.RouteRequestTransitDataProviderFilter;
+import org.opentripplanner.routing.api.request.request.TransitRequest;
+import org.opentripplanner.routing.core.RouteMatcher;
+import org.opentripplanner.transit.model._data.TransitModelForTest;
+import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.model.network.Route;
+import org.opentripplanner.transit.model.organization.Agency;
 
 /**
- * Test the banning and whitelisting functionality in the RoutingRequest.
+ * Test the banning and whitelisting functionality in the RouteRequest.
  * TODO This does not test the that banning/whitelisting affects the routing correctly.
  */
 public class TestBanning {
 
-    @Test
-    public void testSetBannedOnRequest() {
-        Collection<Route> routes = getTestRoutes();
+  @Test
+  public void testSetBannedOnRequest() {
+    Collection<Route> routes = getTestRoutes();
 
-        RoutingRequest routingRequest = new RoutingRequest();
+    final TransitRequest transit = new TransitRequest();
+    transit.setBannedRoutes(RouteMatcher.parse("F__RUT:Route:1"));
+    transit.setBannedAgencies(List.of(FeedScopedId.parseId("F:RUT:Agency:2")));
 
-        routingRequest.setBannedRoutesFromSting("RB__RUT:Route:1");
-        routingRequest.setBannedAgenciesFromSting("RB:RUT:Agency:2");
+    Collection<FeedScopedId> bannedRoutes = RouteRequestTransitDataProviderFilter.bannedRoutes(
+      Set.copyOf(transit.bannedAgencies()),
+      transit.bannedRoutes(),
+      Set.copyOf(transit.whiteListedAgencies()),
+      transit.whiteListedRoutes(),
+      routes
+    );
 
-        Collection<FeedScopedId> bannedRoutes =
-            routingRequest.getBannedRoutes(routes);
+    assertEquals(2, bannedRoutes.size());
+    assertTrue(bannedRoutes.contains(id("RUT:Route:1")));
+    assertTrue(bannedRoutes.contains(id("RUT:Route:3")));
+  }
 
-        Assert.assertEquals(2, bannedRoutes.size());
-        Assert.assertTrue(bannedRoutes.contains(new FeedScopedId("RB", "RUT:Route:1")));
-        Assert.assertTrue(bannedRoutes.contains(new FeedScopedId("RB", "RUT:Route:3")));
-    }
+  @Test
+  public void testSetWhiteListedOnRequest() {
+    Collection<Route> routes = getTestRoutes();
 
-    @Test
-    public void testSetWhiteListedOnRequest() {
-        Collection<Route> routes = getTestRoutes();
+    TransitRequest transit = new TransitRequest();
+    transit.setWhiteListedRoutes(RouteMatcher.parse("F__RUT:Route:1"));
+    transit.setWhiteListedAgencies(List.of(FeedScopedId.parseId("F:RUT:Agency:2")));
 
-        RoutingRequest routingRequest = new RoutingRequest();
+    Collection<FeedScopedId> bannedRoutes = RouteRequestTransitDataProviderFilter.bannedRoutes(
+      Set.copyOf(transit.bannedAgencies()),
+      transit.bannedRoutes(),
+      Set.copyOf(transit.whiteListedAgencies()),
+      transit.whiteListedRoutes(),
+      routes
+    );
 
-        routingRequest.setWhiteListedRoutesFromSting("RB__RUT:Route:1");
-        routingRequest.setWhiteListedAgenciesFromSting("RB:RUT:Agency:2");
+    assertEquals(1, bannedRoutes.size());
+    assertTrue(bannedRoutes.contains(id("RUT:Route:2")));
+  }
 
-        Collection<FeedScopedId> bannedRoutes =
-            routingRequest.getBannedRoutes(routes);
+  private List<Route> getTestRoutes() {
+    Agency agency1 = TransitModelForTest.agency("A").copy().withId(id("RUT:Agency:1")).build();
+    Agency agency2 = TransitModelForTest.agency("B").copy().withId(id("RUT:Agency:2")).build();
 
-        Assert.assertEquals(1, bannedRoutes.size());
-        Assert.assertTrue(bannedRoutes.contains(new FeedScopedId("RB", "RUT:Route:2")));
-    }
-
-    private Collection<Route> getTestRoutes() {
-        Route route1 = new Route(new FeedScopedId("RB", "RUT:Route:1"));
-        route1.setLongName("");
-        Route route2 = new Route(new FeedScopedId("RB", "RUT:Route:2"));
-        route2.setLongName("");
-        Route route3 = new Route(new FeedScopedId("RB", "RUT:Route:3"));
-        route3.setLongName("");
-
-        Agency agency1 = new Agency(
-            new FeedScopedId("RB", "RUT:Agency:1"), "A", "Europe/Paris"
-        );
-        Agency agency2 = new Agency(
-            new FeedScopedId("RB", "RUT:Agency:2"), "B", "Europe/Paris"
-        );
-
-        route1.setAgency(agency1);
-        route2.setAgency(agency1);
-        route3.setAgency(agency2);
-
-        return Arrays.asList(route1, route2, route3);
-    }
+    return List.of(
+      TransitModelForTest.route("RUT:Route:1").withAgency(agency1).build(),
+      TransitModelForTest.route("RUT:Route:2").withAgency(agency1).build(),
+      TransitModelForTest.route("RUT:Route:3").withAgency(agency2).build()
+    );
+  }
 }
